--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,4 @@
 # `ppsr` - Predictive Power Score
 The R implementation of [8080labs Predictive Power Score](https://github.com/8080labs/ppscore).
-Also note [8080labs own implementation of the R variant](https://github.com/8080labs/ppscoreR).
+
+Also note that there's an unfinished [8080labs implementation of the R variant](https://github.com/8080labs/ppscoreR).
