important changes: * weighted F1 score now also for binary classification to prevent errors when 1 is not the class of interest * binary numerics now forced to factors t ensure that they are treated as classification problems * contextual seed used to ensure that naive random predictions result in the same predictions every iteration. This ensures more stable results * minor textual changes

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/README/README-"
+  fig.path = "man/README/"
 )
 ```
 
@@ -84,11 +84,11 @@ functions to help you visualize your PPS using `ggplot2`:
 * `visualize_matrix()` - producing a heatmap of all X-Y PPS
 
 Examples:
-```{r, PPS barplot}
+```{r, PPS-barplot}
 ppsr::visualize_predictors(df = iris, y = 'Species')
 ```
 
-```{r, PPS heatmap}
+```{r, PPS-heatmap}
 ppsr::visualize_matrix(df = iris)
 ```
 
