major change to how score() function works
* score() now provides a detailed report of the calculations and settings
* score() now also takes in a data.frame and the x/y column names
* score() now runs multiple checks and when an error is encountered the description is returned as result_type
* all three scores (model, naive, and normalized) are now calculated simulatenously for every cross-validation
* metrics are now standardized in functions which are retrieved using their name

necessary developments:

* score() now returns a list but this should be transformed into a data.frame
* score_predictors() needs to be parallelized
* score_matrix() should call the parallelized score_predictors()
* new functions should transform the score/matrix/predictors results into score/matrix/predictor overviews

--- a/README.Rmd
+++ b/README.Rmd
@@ -64,7 +64,7 @@ and `X` and `Y` represent all features/targets in a given dataset.
 
 Examples:
 ```{r}
-ppsr::score(x = iris$Sepal.Length, y = iris$Sepal.Width)
+ppsr::score(iris, x = 'Sepal.Length', y = 'Sepal.Width')
 ```
 
 ```{r}
