--- a/README.Rmd
+++ b/README.Rmd
@@ -56,8 +56,9 @@ Scores are normalized using relatively to a naive benchmark of predicting the me
 The `ppsr` package has three main functions that compute PPS:
 
 * `score()` - which computes an x-y PPS
-* `score_predictors()` - which computes X-y PPS
-* `score_matrix()` - which computes X-Y PPS
+* `score_predictors()` - which computes all X-y PPS
+* `score_df()` - which computes all X-Y PPS
+* `score_matrix()` - which computes all X-Y PPS, and shows them in a matrix
 
 where `x` and `y` represent an individual feature/target, 
 and `X` and `Y` represent all features/targets in a given dataset.
@@ -77,22 +78,44 @@ ppsr::score_matrix(df = iris)
 
 
 ## Visualizing PPS
-Subsequently, there are two main functions that wrap around these computational 
+Subsequently, there are three main functions that wrap around these computational 
 functions to help you visualize your PPS using `ggplot2`:
 
-* `visualize_predictors()` - producing a barplot of all X-y PPS
-* `visualize_matrix()` - producing a heatmap of all X-Y PPS
+* `visualize_pps()` - producing a barplot of all X-y PPS, or a heatmap of all X-Y PPS
+* `visualize_correlations()` - producing a heatmap of all X-Y correlations
+* `visualize_both()` - produces two heatmaps of the PPS and correlations of all X-Y PPS side-by-side
 
 Examples:
 ```{r, PPS-barplot}
+# If you specify the target variable (y), you get a barplot of its predictors
 ppsr::visualize_predictors(df = iris, y = 'Species')
 ```
 
-```{r, PPS-heatmap}
-ppsr::visualize_matrix(df = iris)
+```{r, PPS-barplot}
+# If you do not specify `y`, you get a PPS matrix visualized as a heatmap 
+ppsr::visualize_predictors(df = iris)
 ```
 
+```{r, correlation-heatmap}
+ppsr::visualize_correlations(df = iris)
+```
 
+```{r, sbs-heatmap}
+ppsr::visualize_both(df = iris)
+```
+
+You can change the colors of the visualizations using the functions arguments.
+There are also arguments to change the color of the text scores.
+
+Furthermore, the functions return `ggplot2` objects, so you can easily change the theme and other settings.
+```{r, PPS-barplot}
+ppsr::visualize_predictors(df = iris,
+                           color_value_high = 'red', 
+                           color_value_low = 'yellow',
+                           color_text = 'black') +
+  ggplot2::theme_classic() +
+  ggplot2::labs(title = 'Add your own title', caption = 'Or a nice caption')
+```
 
 ## Open issues & development
 PPS is a relatively young concept, and likewise the `ppsr` package is still under development. 
