--- a/README.Rmd
+++ b/README.Rmd
@@ -4,28 +4,29 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-<!-- badges: start -->
-[![R-CMD-check](https://github.com/paulvanderlaken/ppsr/workflows/R-CMD-check/badge.svg)](https://github.com/paulvanderlaken/ppsr/actions)
- <!-- badges: end -->
-
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/README/",
+  fig.path = "man/figures/README-",
   fig.width = 7,
   fig.height = 5, 
-  dpi = 300
-)
+  dpi = 300)
 ```
 
 # `ppsr` - Predictive Power Score
 
-`ppsr` is the R implementation of [8080labs' Predictive Power Score](https://github.com/8080labs/ppscore).
+<!-- badges: start -->
+[![R-CMD-check](https://github.com/paulvanderlaken/ppsr/workflows/R-CMD-check/badge.svg)](https://github.com/paulvanderlaken/ppsr/actions)
+ <!-- badges: end -->
+
+`ppsr` is the R implementation of the Predictive Power Score.
 
 The PPS is an asymmetric, data-type-agnostic score that can detect linear or non-linear relationships between two columns. The score ranges from 0 (no predictive power) to 1 (perfect predictive power). It can be used for data exploration purposes, as a complement to the correlation (matrix).
 
 Read more about the (dis)advantages of the Predictive Power Score in [this blog post](https://towardsdatascience.com/rip-correlation-introducing-the-predictive-power-score-3d90808b9598).
+
+This R package was inspired by 8080labs' Python package [`ppscore`](https://github.com/8080labs/ppscore).
 
 
 ## Installation
