--- a/README.Rmd
+++ b/README.Rmd
@@ -54,7 +54,7 @@ Scores are normalized using relatively to a naive benchmark of predicting the me
 
 ## Usage
 
-The `ppsr` package has three main functions that compute PPS:
+The `ppsr` package has four main functions that compute PPS:
 
 * `score()` - which computes an x-y PPS
 * `score_predictors()` - which computes all X-y PPS
