changes to README and updates visuals with new theme_ppsr

--- a/README.Rmd
+++ b/README.Rmd
@@ -45,13 +45,13 @@ You can install the latest stable version of `ppsr` from CRAN:
 install.packages('ppsr')
 ```
 
+Not all recent features and bugfixes may be included in the CRAN release.
 
-The most recent developmental version of `ppsr` can be installed using the following R code:
+Instead, you might want to download the most recent developmental version of `ppsr` from Github:
 
 ```{r, eval = FALSE, echo = TRUE}
 # You can get the development version from GitHub:
-# First install devtools if needed
-# install.packages('devtools') 
+# install.packages('devtools') # Install devtools if needed
 devtools::install_github('https://github.com/paulvanderlaken/ppsr')
 ```
 
@@ -96,20 +96,25 @@ The `ppsr` package has four main functions to compute PPS:
 where `x` and `y` represent an individual predictor/target, 
 and `X` and `Y` represent all predictors/targets in a given dataset.
 
-Examples:
+### Examples:
+
+`score()` computes the PPS for a single target and predictor
 ```{r}
 ppsr::score(iris, x = 'Sepal.Length', y = 'Petal.Length')
 ```
 
+`score_predictors()` computes all PPSs for a single target using all predictors in a dataframe
 ```{r}
 ppsr::score_predictors(df = iris, y = 'Species')
 ```
 
+`score_df()` computes all PPSs for every target-predictor combination in a dataframe
 ```{r}
 ppsr::score_df(df = iris)
 ```
 
-
+`score_df()` computes all PPSs for every target-predictor combination in a dataframe, 
+but returns only the scores arranged in a neat matrix, like the familiar correlation matrix
 ```{r}
 ppsr::score_matrix(df = iris)
 ```
@@ -125,7 +130,9 @@ You can call the `available_algorithms()` and `available_evaluation_metrics()` f
 to see what alternative settings are supported.
 
 Note that the calculated PPS reflects the **out-of-sample** predictive validity
-when more than a single cross-validation is used.
+when more than a single cross-validation is used. 
+If you prefer to look at in-sample scores, you can set `cv_folds = 1`.
+Note that in such cases overfitting can become an issue, particularly with the more flexible algorithms.
 
 
 
@@ -137,21 +144,24 @@ functions to help you visualize your PPS using `ggplot2`:
 * `visualize_correlations()` produces a heatmap of all X-Y correlations
 * `visualize_both()` produces the two heatmaps of all X-Y PPS and correlations side-by-side
 
-Examples:
+### Examples:
+
+If you specify a target variable (`y`) in `visualize_pps()`, you get a barplot of its predictors.
 ```{r, PPS-barplot}
-# If you specify the target variable (y), you get a barplot of its predictors
 ppsr::visualize_pps(df = iris, y = 'Species')
 ```
 
+If you do not specify a target variable in `visualize_pps()`, you get the PPS matrix visualized as a heatmap.
 ```{r, PPS-heatmap}
-# If you do **not** specify the target variable (y), you get a PPS matrix visualized as a heatmap 
 ppsr::visualize_pps(df = iris)
 ```
 
+Some users might find it useful to look at a correlation matrix for comparison.
 ```{r, correlation-heatmap}
 ppsr::visualize_correlations(df = iris)
 ```
 
+With `visualize_both` you generate the PPS and correlation matrices side-by-side, for easy comparison.
 ```{r, sbs-heatmap, fig.width=14}
 ppsr::visualize_both(df = iris)
 ```
@@ -159,8 +169,7 @@ ppsr::visualize_both(df = iris)
 You can change the colors of the visualizations using the functions arguments.
 There are also arguments to change the color of the text scores.
 
-Furthermore, the functions return `ggplot2` objects, 
-so that you can easily change the theme and other settings.
+Furthermore, the functions return `ggplot2` objects, so that you can easily change the theme and other settings.
 
 ```{r, custom-plot}
 ppsr::visualize_pps(df = iris,
@@ -172,7 +181,7 @@ ppsr::visualize_pps(df = iris,
   ggplot2::theme(title = ggplot2::element_text(size = 15)) +
   ggplot2::labs(title = 'Add your own title', 
                 subtitle = 'Maybe an informative subtitle',
-                caption = 'And a nice caption',
+                caption = 'Did you know ggplot2 includes captions?',
                 x = 'You could call this\nthe independent variable\nas well')
 ```
 
@@ -218,11 +227,14 @@ The normalization occurs by comparing how well we are able to predict the values
 a _target_ variable (`y`) using the values of a _predictor_ variable (`x`), 
 respective to two **benchmarks**: a perfect prediction, and a naive prediction 
 
-The **perfect prediction** can be theoretically derived. A perfect regression model produces no error (=0.0), 
+The **perfect prediction** can be theoretically derived. 
+A perfect regression model produces no error (=0.0), 
 whereas a perfect classification model results in 100% accuracy, recall, et cetera (=1.0).
 
-The **naive prediction** is derived empirically. A naive regression model is simulated by predicting the mean `y` value for all observations. 
-This is similar to how R-squared is calculated. A naive classification model is simulated by taking the best among two models:
+The **naive prediction** is derived empirically. 
+A naive _regression_ model is simulated by predicting the mean `y` value for all observations. 
+This is similar to how R-squared is calculated. 
+A naive _classification_ model is simulated by taking the best among two models:
 one predicting the modal `y` class, and one predicting random `y` classes for all observations.
 
 Whenever we train an "informed" model to predict `y` using `x`, 
@@ -250,23 +262,27 @@ the evaluation metrics, and any other settings used.
 ## Considerations
 
 The main use of PPS is as a tool for data exploration.
-It trains an out-of-the-box model to assess the predictive relations in your dataset.
-However, this PPS is quite a "quick and dirty" approach.
+It trains out-of-the-box machine learning models to assess the predictive relations in your dataset.
 
-For example, it could be that you get many PPS's of 0 with the default settings.
+However, this PPS is quite a "quick and dirty" approach.
+The trained models are not at all tailored to your specific regression/classification problem.
+For example, it could be that you get many PPSs of 0 with the default settings.
 A known issue is that the default decision tree often does not find valuable splits
 and reverts to predicting the mean `y` value found at its root.
 Here, it could help to try calculating PPS with different settings (e.g., `algorithm = 'glm'`).
 
 At other times, predictive relationships may rely on a combination of variables 
 (i.e. interaction/moderation). These are not captured by the PPS calculations, 
-which consider only univariate relations.
+which consider only univariate relations. 
+PPS is simply not suited for capturing such complexities. 
+In these cases, it might be more interesting to train models on all your features simultaneously 
+and turn to concepts like [feature/variable importance](https://topepo.github.io/caret/variable-importance.html),
+[partial dependency](https://christophm.github.io/interpretable-ml-book/pdp.html), [conditional expectations](https://christophm.github.io/interpretable-ml-book/ice.html), [accumulated local effects](https://christophm.github.io/interpretable-ml-book/ale.html), and others.
 
-In general, the PPS should not be considered more than an easy tool for
+In general, the PPS should not be considered more than a fast and easy tool to 
 finding starting points for further, in-depth analysis. 
-Keep in mind that you can build much better predictive models 
-than the default PPS functions if you tailor 
-your modeling efforts to your specific data context.
+Keep in mind that you can build much better predictive models than the default 
+PPS functions if you tailor your modeling efforts to your specific data context.
 
 
 
@@ -279,6 +295,7 @@ On the developmental agenda are currently:
 
 * Implementation of different modeling techniques/algorithms
 * Implementation of generalized linear models for multinomial classification
+* Implement passing/setting of parameters for models
 * Implementation of different model evaluation metrics
 * Support for user-defined model evaluation metrics
 * Implementation of downsampling for large datasets
